password fields icon overlapping fixed

--- a/Frontend/src/app/issues/internet/routes/reset-internet-password/reset-internet-password.component.scss
+++ b/Frontend/src/app/issues/internet/routes/reset-internet-password/reset-internet-password.component.scss
@@ -116,9 +116,12 @@ ion-item::part(native){
         }
       }
     }
+    .password-field{    
+      --padding-end: 24px;   
+    }
     .show-icon{
       position: absolute;
-      bottom: 12px;
+      bottom: 8px;
       cursor: pointer;
       z-index: 2;
     }
